--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+huayra-grub-themes (1.4) unstable; urgency=medium
+
+  * sacando dependencia de grub (pipuparts no se ejecuta) 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 06 Mar 2014 16:18:45 -0300
+
+huayra-grub-themes (1.3) unstable; urgency=medium
+
+  * correccion de config 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 06 Mar 2014 16:12:52 -0300
+
+huayra-grub-themes (1.2) unstable; urgency=medium
+
+  * correccion de script postintall 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 06 Mar 2014 15:55:43 -0300
+
+huayra-grub-themes (1.1) unstable; urgency=medium
+
+  * correccion de manejo de los templates y fixes de lintian
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 06 Mar 2014 15:32:48 -0300
+
 huayra-grub-themes (1.0) unstable; urgency=low
 
   * Initial release.
