--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.6) unstable; urgency=medium
+
+  * paquete version 1.6 con correccion de paths en scripts 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 07 Mar 2014 14:33:00 -0300
+
 huayra-grub-themes (1.5) unstable; urgency=medium
 
   * correccion nombre de tempate en postinst 
