--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.7) unstable; urgency=medium
+
+  * error sintaxis de variable 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 07 Mar 2014 17:10:10 -0300
+
 huayra-grub-themes (1.6) unstable; urgency=medium
 
   * paquete version 1.6 con correccion de paths en scripts 
