--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.8) unstable; urgency=medium
+
+  * cambiando prioridades de templates 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 07 Mar 2014 17:23:50 -0300
+
 huayra-grub-themes (1.7) unstable; urgency=medium
 
   * error sintaxis de variable 
