--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+huayra-grub-themes (1.9) unstable; urgency=low
+
+  * Agrego dependencia en grub-pc
+  * Verifico si existe el archivo de cfg de grub.
+  * Bump Standards-Version
+
+ -- Mauro <mauro@krutt.org>  Fri, 28 Mar 2014 16:17:42 -0300
+
 huayra-grub-themes (1.8) unstable; urgency=medium
 
   * cambiando prioridades de templates 
