--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.12) unstable; urgency=low
+
+  * correccion de debian/config
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 04 Apr 2014 14:33:29 -0300
+
 huayra-grub-themes (1.11) unstable; urgency=low
 
   * agregando resolucion en los templates
