--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+huayra-grub-themes (1.14.1) unstable; urgency=medium
+
+  * Fix Logos.
+
+ -- mauro <mauro@krutt.org>  Wed, 09 Apr 2014 12:40:53 -0300
+
+huayra-grub-themes (1.14) unstable; urgency=medium
+
+  * Nuevo release
+
+ -- mauro <mauro@krutt.org>  Wed, 09 Apr 2014 12:24:05 -0300
+
+huayra-grub-themes (1.13) unstable; urgency=medium
+
+  * Nuevo release
+
+ -- Mauro <mauro@krutt.org>  Tue, 08 Apr 2014 14:59:34 -0300
+
 huayra-grub-themes (1.12) unstable; urgency=low
 
   * correccion de debian/config
