--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.14.2) unstable; urgency=medium
+
+  * corrección de fuentes para marble 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Wed, 14 May 2014 10:07:02 -0300
+
 huayra-grub-themes (1.14.1) unstable; urgency=medium
 
   * Fix Logos.
