--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.15) unstable; urgency=low
+
+  * Nuevo release
+
+ -- Mauro <mauro@krutt.org>  Tue, 27 Jan 2015 14:18:45 -0300
+
 huayra-grub-themes (1.14.4) unstable; urgency=low
 
   * titulo nuevo
