--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.14.5) unstable; urgency=medium
+
+  * Reoganizando el paquete para soportar varias resoluciones en el tema
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Mon, 23 Feb 2015 15:50:10 -0300
+
 huayra-grub-themes (1.14.4) unstable; urgency=low
 
   * titulo nuevo
