--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-huayra-grub-themes (1.15.2) UNRELEASED; urgency=medium
+huayra-grub-themes (1.15.2) unstable; urgency=medium
 
   * Arreglando templates de debconf 
 
