--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+huayra-grub-themes (1.15.4) unstable; urgency=medium
+
+  * Corrigiendo errores en la instalacion de temas.
+  * Directorio `icons` en cada resolucion.
+  * Modifico descripcion en debian/control
+
+ -- Mauro <mauro@sdf.org>  Tue, 03 Mar 2015 14:33:57 -0300
+
 huayra-grub-themes (1.15.3) unstable; urgency=medium
 
   * quitando dependencias de grub para probar installer en uefi 
