actualziacion de imagenes

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.15.7) unstable; urgency=medium
+
+  * actualización de imagenes
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Mon, 23 May 2016 14:51:35 -0300
+
 huayra-grub-themes (1.15.6) unstable; urgency=medium
 
   * actualización tema para imagen 2016
