--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.15.6+nmu2) unstable; urgency=medium
+
+  * Ajustes en theme.txt de 1024x600
+
+ -- Iván Hoffmann <digital.h@gmail.com>  Thu, 29 Sep 2016 12:24:28 -0300
+
 huayra-grub-themes (1.15.6+nmu1) unstable; urgency=medium
 
   * Non-maintainer upload.
