--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.18) unstable; urgency=medium
+
+  * mas fixes del theme JM 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 26 Feb 2021 19:30:28 -0300
+
 huayra-grub-themes (1.17) unstable; urgency=medium
 
   * fix nombre de paquete 
