--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.19) unstable; urgency=medium
+
+  * Nuevo theme Crux
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Fri, 30 Jul 2021 17:12:24 -0300
+
 huayra-grub-themes (1.18) unstable; urgency=medium
 
   * mas fixes del theme JM 
