--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,17 @@
+huayra-grub-themes (1.21) UNRELEASED; urgency=medium
+
+  [ Fernando Toledo ]
+  * renombrado del directorio
+  * agregando archivos de paquete para el theme nuevo
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Tue, 23 Nov 2021 12:21:26 -0300
+
 huayra-grub-themes (1.20) unstable; urgency=medium
 
   [ malefico ]
   * Nuevo logo
 
- -- Fernando Toledo <ragnarok@docksud.com.ar>  Sat, 31 Jul 2021 22:58:42 -0300
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Tue, 23 Nov 2021 12:21:22 -0300
 
 huayra-grub-themes (1.19) unstable; urgency=medium
 
