--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.27) unstable; urgency=medium
+
+  * prueba templates por theme pba 
+
+ -- Fernando Toledo <ragnarok@docksud.com.ar>  Thu, 27 Jul 2023 10:24:03 -0300
+
 huayra-grub-themes (1.26) unstable; urgency=medium
 
   * fix theme.txt de huayra-pba 
