--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-grub-themes (1.28) unstable; urgency=medium
+
+  * Agrega los temas Conectar Igualdad 2022 y 2023
+
+ -- Matias De lellis <mati86dl@gmail.com>  Mon, 26 Feb 2024 21:08:27 -0300
+
 huayra-grub-themes (1.27) unstable; urgency=medium
 
   * prueba templates por theme pba 
